--- a/object_detection/requirements.txt
+++ b/object_detection/requirements.txt
@@ -1,13 +1,13 @@
-datasets==2.20.0
-torch==2.3.0
-torchvision==0.18.0
-transformers==4.44.0
-accelerate==0.32.0
-matplotlib==3.9.2
+datasets==3.2.0
+torch==2.4.0
+torchvision==0.19.0
+transformers==4.48.0
+accelerate==1.3.0
+matplotlib==3.10.0
 pillow==10.4.0
 ipywidgets==8.1.3
-albumentations==1.4.18
+albumentations==2.0.4
 pycocotools==2.0.8
 timm==1.0.8
-torchmetrics==1.4.1
-maskrcnn-modanet==1.0.3
+torchmetrics==1.6.1
+#maskrcnn-modanet==1.0.3
